--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -4,10 +4,8 @@
 .button {
 	color: white;
 	background: rgb(74, 74, 141);
-	// width: 140px;
-	// height: 52px;
-	padding: 4px 8px;
-	font-size: 1rem;
+	padding: 10px;
+	font-size: .9rem;
 	font-weight: 500;
 	border: none;
 	border-radius: 4px;
