--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,4 +1,4 @@
-.button_green {
+ .button_green {
 	background: #009!important;
 }
 
@@ -16,6 +16,7 @@
 	font-weight: 900;
 	text-align: center;
 	padding: 8px 16px 8px 16px;
+	background-color:#EAEAEA;
 }
 .result {
 	padding: 8px;
@@ -30,5 +31,15 @@
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	justify-content: center;
+	justify-content: space-evenly;
+	text-align: left;
+}
+
+.second_title {
+	display: flex;
+	justify-content: space-between;
+	padding-right: 30px;
+	padding-left: 30px;
+	margin-bottom:5px;
+
 }
