--- a/src/Board/Board.module.scss
+++ b/src/Board/Board.module.scss
@@ -17,3 +17,48 @@
 	justify-content: space-between;
 	padding: 16px 28px;
 }
+
+.plus_icon{
+	width: 15px;
+	height: 15px;
+	fill: white;
+
+}
+
+.board_name {
+	text-align: center;
+	padding-top:5px;
+	font-weight: 900;
+	font-size: 1.2rem;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between; 
+	padding: 5px;
+	background-color:#EAEAEA;
+	box-shadow: 0px 2px 3px #999;
+}
+.name_title{
+	margin-top:5px;
+	margin-left: 10px;
+}
+.close_board_button:hover > svg {
+	fill:white;
+}
+
+.close_board_button {
+	box-shadow: 0px 0px 0px transparent;
+	background-color: transparent;
+	border-radius: 4px;
+	margin:-4px;
+    background-color: #EAEAEA !important;
+
+}
+.close_board_button:hover{
+	color:#FFF;
+	background-color:#900 !important;
+}
+
+.board_counter {
+	font-size:12px;
+	font-weight: 100;
+}
