--- a/src/Board/Board.module.scss
+++ b/src/Board/Board.module.scss
@@ -17,3 +17,18 @@
 	justify-content: space-between;
 	padding: 16px 28px;
 }
+
+.icon {
+	width: 14px;
+	height:14px;
+	fill: white;
+}
+
+.titulo {
+
+	padding:5px;
+	text-align: center;
+	border-bottom: 1px solid #9999;
+	background-color: #EAEAEA;
+	box-shadow: 0px 1px 3px #999;
+}
