--- a/src/components/Input/Input.module.scss
+++ b/src/components/Input/Input.module.scss
@@ -8,7 +8,7 @@
 	font-size: .9rem;
 	font-weight: 500;
 	line-height: normal;
-	width: 250px;
+	max-width: 250px;
 	
 	padding: 5px 5px;
 	margin: 1px 0 0 0;
