--- a/src/components/List/List.module.scss
+++ b/src/components/List/List.module.scss
@@ -34,18 +34,29 @@
     background-color: #EAEAEA;
     background: linear-gradient(45deg, rgba(200,200,200,0),rgba(234,234,234,1));
 }
-.item_svg {
-    flex:1;
-    color: transparent;
-    height: auto;
-}
-.item_svg:hover{
-    box-shadow: 1px 2px 3px #999;
-}
+
 .item_name {
     flex:5
 }
 .icon_mark{
     width: 10px;
     height: 10px;
+    fill:#999;
 }                             
+.list_item_button{
+    background-color: transparent !important;
+    box-shadow: 0px 0px 0px transparent;
+}
+.list_item_button:hover{
+    box-shadow: 0px 0px 0px transparent !important;
+}
+
+.list_item_button:hover > svg{
+    fill:#900;
+}
+.list_item_button > svg{
+    fill:#FFF;
+}
+.item:hover > div > button{
+    background-color: rgba(200,0,0,.4) !important;
+}
