--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -2,6 +2,8 @@
 	box-sizing: border-box;
 }
 .button {
+	transition: all .3s ease-out;
+	box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.2);
 	color: white;
 	background: rgb(74, 74, 141);
 	padding: 10px;
@@ -19,7 +21,7 @@
 	background: red;
 }
 .button:hover {
-	box-shadow: 1px 2px 4px #000;
+	box-shadow: 0 0 0 35px rgba(0, 0, 0, 0);
 }
 .main {
 	display: flex;
